--- a/porsche911_website/index.html
+++ b/porsche911_website/index.html
@@ -11,12 +11,12 @@
   <section id="home" class="hero-section">
     <header class="header">
       <div class="header__brand">
-        <img src="https://placehold.co/24x24" alt="Logo">
+        <img src="images/logo.png" alt="Logo">
         <div class="brand-title">Porsche 911</div>
       </div>
       <nav class="header__nav">
         <button type="button" aria-label="Przejdź do sekcji Strona Główna">Home</button>
-        <button type="button" aria-label="Przejdź do sekcji Modele">Models</button>
+        <button type="button" aria-label="Przejdź do sekcji Modele">Modele</button>
         <button type="button" aria-label="Przejdź do sekcji O nas">O nas</button>
         <button type="button" aria-label="Przejdź do sekcji Kontakt">Kontakt</button>
       </nav>
@@ -35,7 +35,7 @@
     <div class="models-grid">
       <article class="model-card">
         <div class="card-image">
-          <img src="https://placehold.co/500x500" alt="911 Carrera">
+          <img src="images/911_carrera.jpg" alt="911 Carrera">
           <div class="card-title-bar"></div>
           <h3 class="card-title">911 Carrera</h3>
         </div>
@@ -47,7 +47,7 @@
   
       <article class="model-card">
         <div class="card-image">
-          <img src="https://placehold.co/500x500" alt="911 Turbo">
+          <img src="images/911_turbo.jpg" alt="911 Turbo">
           <div class="card-title-bar"></div>
           <h3 class="card-title">911 Turbo</h3>
         </div>
@@ -59,7 +59,7 @@
   
       <article class="model-card">
         <div class="card-image">
-          <img src="https://placehold.co/500x500" alt="911 GT3">
+          <img src="images/911_GT3.jpg" alt="911 GT3">
           <div class="card-title-bar">911 GT3</div>
           <h3 class="card-title">911 GT3</h3>
         </div>
@@ -71,7 +71,7 @@
   
       <article class="model-card">
         <div class="card-image">
-          <img src="https://placehold.co/500x500" alt="911 Dakar">
+          <img src="images/911_dakar.jpg" alt="911 Dakar">
           <div class="card-title-bar"></div>
           <h3 class="card-title">911 Dakar</h3>
         </div>
