--- a/Static-Page-main/backend/app-backend/public/index.html
+++ b/Static-Page-main/backend/app-backend/public/index.html
@@ -1,13 +1,120 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="pl">
 <head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Porsche 911</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
 
+  <header class="header">
+    <div class="header__brand">
+      <img src="images/logo.png" alt="Logo">
+      <div class="brand-title">Porsche 911</div>
+    </div>
+    <button class="menu-toggle" aria-label="Otwórz menu">
+      <span class="menu-toggle__bar"></span>
+      <span class="menu-toggle__bar"></span>
+      <span class="menu-toggle__bar"></span>
+    </button>
+    <nav class="header__nav">
+      <a href="#home"><button type="button" aria-label="Przejdź do sekcji Strona Główna">Home</button></a>
+      <a href="#models"><button type="button" aria-label="Przejdź do sekcji Modele">Modele</button></a>
+      <a href="#about"><button type="button" aria-label="Przejdź do sekcji O nas">O nas</button></a>
+      <a href="#contact"><button type="button" aria-label="Przejdź do sekcji Kontakt">Kontakt</button></a>
+    </nav>
+  </header>
+
+  <section id="home" class="hero-section">
+    <div class="hero-content">
+      <h1 class="hero-main-content">Porsche 911 – Marzenie w ruchu</h1>
+      <p class="hero-subtitle">Znajdź swoje marzenia</p>
+      <button class="hero-button" type="button">Eksploruj</button>
+      <p class="hero-description">Od ponad 60 lat niepokonana ikona drogowych emocji. 🏁</p>
+    </div>
+  </section>
+
+<section id="models" class="models-section">
+  <h2 class="section-title">Modele</h2>
+  <div id="modelsGrid" class="models-grid"></div>
+</section>
+
+
+  <section id="about">
+    <section class="alt-section-wrapper">
+      <h2 class="alt-section-title">NASZA DROGA</h2>
+      <p class="alt-section-subtitle">Porsche 911 to synonim perfekcji, emocji i innowacji. Od 1964 roku kształtuje marzenia kierowców na całym świecie</p>
+
+      <div class="alt-cards-wrapper">
+        <div class="alt-card main-card">
+          <h3>Nasze wartości</h3>
+          <p>W Porsche 911 każdy detal ma znaczenie, bo dla nas motoryzacja to nie tylko technologia – to sztuka. Z każdą linią, każdym zakrętem, każdą decyzją projektową łączymy tradycję z innowacją. Nasza misja to nieustanne dążenie do perfekcji, tworzenie samochodów, które nie tylko podnoszą adrenalinę, ale także oferują niezrównaną jakość, komfort i emocje.</p>
+        </div>
+
+        <div class="alt-card">
+          <div class="alt-icon"><span>⏩</span></div>
+          <h3>Rekord Długości</h3>
+          <p><em>Porsche 911 jest jednym z najdłużej produkowanych modeli samochodów sportowych na świecie – nieprzerwanie od 1964 roku aż do dziś, z zachowaniem klasycznej sylwetki.</em></p>
+        </div>
+
+        <div class="alt-card">
+          <div class="alt-icon"><span>🔧</span></div>
+          <h3>Odwrócony Silnik</h3>
+          <p>W Porsche 911 silnik zamontowany jest za tylną osią, co daje unikalne prowadzenie...</p>
+        </div>
+
+        <div class="alt-card">
+          <div class="alt-icon"><span>🤍</span></div>
+          <h3>Legenda 911</h3>
+          <p>Porsche chciało nazwać model „901”, ale Peugeot miał zastrzeżenie do nazwy z „0” w środku...</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <section id="contact">
+    <section class="contact-section">
+      <div class="contact-header">
+        <h2>Skontaktuj się z nami</h2>
+        <p>Jesteśmy tu, aby odpowiedzieć na Twoje pytania.</p>
+      </div>
+
+      <div class="contact-container">
+        <div class="contact-info">
+          <h3>Dane kontaktowe</h3>
+          <address>
+            Kosmiczna Firma S.A.<br>
+            ul. Zakręcona 125, 12-345 Wielki Nowy Jork<br>
+            Państwo Marzycieli 94107<br>
+            Tel.: (123) 456-7890
+          </address>
+        </div>
+
+        <form class="contact-form">
+          <input type="text" placeholder="Imię" required>
+          <input type="text" placeholder="Nazwisko" required>
+          <input type="text" placeholder="Temat" required>
+          <textarea rows="6" placeholder="Wiadomość" required></textarea>
+          <button type="submit">Wyślij</button>
+        </form>
+      </div>
+    </section>
+  </section>
+
+  <footer class="site-footer">
+    <div class="footer-text">
+      2025 SB & PC – Gdyby kreatywność miała prawo jazdy, my już bylibyśmy w kosmosie.
+    </div>
+    <div class="footer-icons">
+      <a href="#"><img src="facebook-icon.svg" alt="Facebook"></a>
+      <a href="#"><img src="instagram-icon.svg" alt="Instagram"></a>
+      <a href="#"><img src="discord-icon.svg" alt="Discord"></a>
+      <a href="#"><img src="github-icon.svg" alt="GitHub"></a>
+    </div>
+  </footer>
+
+  <script src="scripts.js"></script>
+
+</body>
 </html>
